<resources>
    <string name="app_name">Теорема Пифагора</string>
    <string name="title">Вычислить \"С\"</string>
    <string name="resultInfo">Результат:&#032;</string>
    <string name="inputA">Введите значение \"А\":</string>
    <string name="inputB">Введите значение \"B\":</string>
    <string name="result">Рассчитать</string>
    <string name="description_img_Pythagorean_theorem">Изображение теоремы Пифагора</string>
</resources>