<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/indent_standart"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/theoremImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/theoremImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:srcCompat="@drawable/theorem"
        android:contentDescription="@string/description_img_Pythagorean_theorem" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="384dp" />

    <TextView
        android:id="@+id/calculationResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/resultInfo"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutA"
        app:layout_constraintEnd_toEndOf="@id/theoremImg"
        app:layout_constraintStart_toStartOf="@id/theoremImg"
        app:layout_constraintTop_toBottomOf="@+id/theoremImg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutB"
        app:layout_constraintEnd_toEndOf="@+id/theoremImg"
        app:layout_constraintStart_toStartOf="@+id/theoremImg"
        app:layout_constraintTop_toBottomOf="@+id/calculationResult">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputA"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="@+id/theoremImg"
        app:layout_constraintStart_toStartOf="@+id/theoremImg"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutA">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputB"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:backgroundTint="@color/grey"
        android:onClick="onClickResult"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutB"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutB"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutB" />


</androidx.constraintlayout.widget.ConstraintLayout>